src/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card__c</fullName>
        <label>Plastic card</label>
        <referenceTo>Plastic_card__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant</label>
        <referenceTo>Merchant__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_day__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()), MONTH(TODAY()), DAY(TODAY())+1)</defaultValue>
        <label>Next day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_month__c</fullName>
        <defaultValue>DATE(YEAR(TODAY()), MONTH(TODAY())+1, 1) - 1</defaultValue>
        <label>Next month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <label>Operation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
                <value>
                    <fullName>Replenishment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TN-{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Active_card_and_acc</fullName>
        <active>true</active>
        <errorConditionFormula>Card__r.Active__c = false</errorConditionFormula>
        <errorMessage>Card is not active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Daily_limit</fullName>
        <active>true</active>
        <errorConditionFormula>if( ISPICKVAL(Operation_Type__c, &apos;Withdrawal&apos;), 
 Card__r.Bank_account__r.Daily_limit__c  &lt; Amount__c , false)</errorConditionFormula>
        <errorMessage>Daily limit exceeded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monthly_limit</fullName>
        <active>true</active>
        <errorConditionFormula>if( ISPICKVAL(Operation_Type__c, &apos;Withdrawal&apos;), 
Card__r.Bank_account__r.Monthly_limit__c &lt; Amount__c , false)</errorConditionFormula>
        <errorMessage>Monthly limit exceeded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_time_limit</fullName>
        <active>true</active>
        <errorConditionFormula>if( ISPICKVAL(Operation_Type__c,  &apos;Withdrawal&apos;),  
Card__r.Bank_account__r.One_time_limit__c &lt;  Amount__c , false)</errorConditionFormula>
        <errorMessage>One-time limit exceeded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_balance</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Card__r.Bank_account__r.Overdraft__c = false,

    IF( ISPICKVAL(Operation_Type__c, &apos;Withdrawal&apos;),
          Card__r.Balance__c &lt;  Amount__c, false),

    IF( ISPICKVAL(Operation_Type__c, &apos;Withdrawal&apos;),
 Card__r.Bank_account__r.Balance__c + Card__r.Bank_account__r.Overdraft_limit__c  &lt; Amount__c, false))</errorConditionFormula>
        <errorMessage>Transaction can not be made due to lack of balance</errorMessage>
    </validationRules>
</CustomObject>